--- a/docs/a8.md
+++ b/docs/a8.md
@@ -39,66 +39,66 @@ The Vertical Prototype includes the implementation of two or more user stories (
 
 | Web Resource Reference | URL                            |
 | ---------------------- | ------------------------------ |
-| [R101](a7#r101-login-form): Login Form | `/login` |
-| [R102](a7#r102-login-action): Login Action | `/login` |
-| [R103](a7#r103-logout-action): Logout Action | `/logout` |
-| [R104](a7#r104-register-form): Register Form | `/register` |
-| [R105](a7#r105-register-action): Register Action | `/register` |
-| [R106](a7#r106-password-recovery-form): Password Recovery Form | `/password/reset` | 
-| [R107](a7#r107-password-recovery-action): Password Recovery Action | `/password/email` |
-| [R108](a7#r108-password-update-form): Password Update Form | `/password/reset/{token}` |
-| [R109](a7#r109-password-update-action): Password Update Action | `/password/reset` |
+| [R101](a7.md#r101-login-form): Login Form | `/login` |
+| [R102](a7.md#r102-login-action): Login Action | `/login` |
+| [R103](a7.md#r103-logout-action): Logout Action | `/logout` |
+| [R104](a7.md#r104-register-form): Register Form | `/register` |
+| [R105](a7.md#r105-register-action): Register Action | `/register` |
+| [R106](a7.md#r106-password-recovery-form): Password Recovery Form | `/password/reset` | 
+| [R107](a7.md#r107-password-recovery-action): Password Recovery Action | `/password/email` |
+| [R108](a7.md#r108-password-update-form): Password Update Form | `/password/reset/{token}` |
+| [R109](a7.md#r109-password-update-action): Password Update Action | `/password/reset` |
 
 #### Module M02: Individual Profile
 
 | Web Resource Reference | URL                            |
 | ---------------------- | ------------------------------ |
-| [R201](a7#r201-view-profile): View Profile | `/users/{id}` |
+| [R201](a7.md#r201-view-profile): View Profile | `/users/{id}` |
 
 #### Module M03: Friends
 
 | Web Resource Reference | URL                            |
 | ---------------------- | ------------------------------ |
-| [R301](a7#r301-view-user-friend-list): View Friend List | [`/users/{id}/friends`] |
-| [R302](a7#r302-view-friend-request-list): View Friend Request List | [`/friends/requests`] |
-| [R303](a7#r303-send-friend-request-api): Send Friend Request API | [`/api/friends/requests`] |
-| [R304](a7#r304-respond-friend-request-api): Respond Friend Request API | [`/api/friends/requests/{id}`] |
-| [R305](a7#r305-unfriend-user-api): Unfriend User API | [`/api/friends/{id}`] |
-| [R306](a7#r306-create-group-of-friends-api): Create Group of Friends API | [`/api/friends/groups`] |
-| [R307](a7#r307-add-friend-to-group-of-friends-api): Add friend to Group of friends API | [`/api/friends/groups/{id}/{f_id}`] | 
-| [R308](a7#r308-remove-friend-from-group-of-friends-api): Remove friend from group of friends API | [`/api/friends/groups/{id}/{f_id}`] |
-| [R309](a7#r309-delete-group-of-friends-api): Delete Group of friends API | [`/api/friends/groups/{id}`] | 
-| [R310](a7#r310-rename-group-of-friends-api): Rename Group of friends API | [`/api/friends/groups/{id}`] | 
+| [R301](a7.md#r301-view-user-friend-list): View Friend List | [`/users/{id}/friends`] |
+| [R302](a7.md#r302-view-friend-request-list): View Friend Request List | [`/friends/requests`] |
+| [R303](a7.md#r303-send-friend-request-api): Send Friend Request API | [`/api/friends/requests`] |
+| [R304](a7.md#r304-respond-friend-request-api): Respond Friend Request API | [`/api/friends/requests/{id}`] |
+| [R305](a7.md#r305-unfriend-user-api): Unfriend User API | [`/api/friends/{id}`] |
+| [R306](a7.md#r306-create-group-of-friends-api): Create Group of Friends API | [`/api/friends/groups`] |
+| [R307](a7.md#r307-add-friend-to-group-of-friends-api): Add friend to Group of friends API | [`/api/friends/groups/{id}/{f_id}`] | 
+| [R308](a7.md#r308-remove-friend-from-group-of-friends-api): Remove friend from group of friends API | [`/api/friends/groups/{id}/{f_id}`] |
+| [R309](a7.md#r309-delete-group-of-friends-api): Delete Group of friends API | [`/api/friends/groups/{id}`] | 
+| [R310](a7.md#r310-rename-group-of-friends-api): Rename Group of friends API | [`/api/friends/groups/{id}`] | 
 
 #### Module M04: Content
 
 | Web Resource Reference | URL                            |
 | ---------------------- | ------------------------------ |
-| [R401](a7#r401-view-post): View Post | [`/post/{id}`] |
-| [R402](a7#r402-add-post-api): Add Post API | `/api/post` |
-| [R403](a7#r403-add-comment-api): Add Comment API | `/api/post/{id}/comment` |
-| [R404](a7#r404-edit-post-api): Edit Post API | `/api/post/{id}` |
-| [R405](a7#r405-edit-comment-api): Edit Comment API | `/api/post/{id}/comment` |
-| [R406](a7#r406-delete-post-api): Delete Post API | `/api/post/{id}` |
-| [R407](a7#r407-delete-comment-action-api): Delete Comment API | `/api/post/{id}/comment/{comment_id}` |
-| [R411](a7#r411-view-feed): View Feed | `/feed` |
-| [R412](a7#r412-view-search): View Search | `/search` |
+| [R401](a7.md#r401-view-post): View Post | [`/post/{id}`] |
+| [R402](a7.md#r402-add-post-api): Add Post API | `/api/post` |
+| [R403](a7.md#r403-add-comment-api): Add Comment API | `/api/post/{id}/comment` |
+| [R404](a7.md#r404-edit-post-api): Edit Post API | `/api/post/{id}` |
+| [R405](a7.md#r405-edit-comment-api): Edit Comment API | `/api/post/{id}/comment` |
+| [R406](a7.md#r406-delete-post-api): Delete Post API | `/api/post/{id}` |
+| [R407](a7.md#r407-delete-comment-action-api): Delete Comment API | `/api/post/{id}/comment/{comment_id}` |
+| [R411](a7.md#r411-view-feed): View Feed | `/feed` |
+| [R412](a7.md#r412-view-search): View Search | `/search` |
 
 #### Module M07: Administration
 
 | Web Resource Reference | URL                            |
 | ---------------------- | ------------------------------ |
-| [R701](a7#r701-view-admin-home-page): View Admin Home Page  | `/admin` |
-| [R702](a7#r702-view-announcement-page): View Announcement Page | `/admin/announcements` |
-| [R705](a7#r705-view-reported-posts-page): View Reported Posts Page (mockup only)  | `/admin/reports` |
-| [R707](a7#r707-view-users-page): View Users Page (mockup only) | `/admin/users` |
+| [R701](a7.md#r701-view-admin-home-page): View Admin Home Page  | `/admin` |
+| [R702](a7.md#r702-view-announcement-page): View Announcement Page | `/admin/announcements` |
+| [R705](a7.md#r705-view-reported-posts-page): View Reported Posts Page (mockup only)  | `/admin/reports` |
+| [R707](a7.md#r707-view-users-page): View Users Page (mockup only) | `/admin/users` |
 
 #### Module M08: Static Pages
 
 | Web Resource Reference | URL                            |
 | ---------------------- | ------------------------------ |
-| [R801](a7#r801-landing-page): Landing Page  | `/` |
-| [R802](a7#r802-about-page): About Page  | `/about` |
+| [R801](a7.md#r801-landing-page): Landing Page  | `/` |
+| [R802](a7.md#r802-about-page): About Page  | `/about` |
 
 ## 2. Prototype
 
